--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,15 +3,15 @@ Title: Data from the M-competitions
 Description: The 1001 time series from the M-competition (Makridakis et
         al. 1982) and the 3003 time series from the IJF-M3 competition
         (Makridakis and Hibon, 2000).
-Version: 2.01
-Date: 2009-10-19
+Version: 2.02
+Date: 2011-02-23
 Depends: R (>= 2.0.0), graphics, stats, tseries, forecast
 LazyData: yes
 LazyLoad: yes
 Author: Rob J Hyndman <Rob.Hyndman@buseco.monash.edu.au>
 Maintainer: Rob J Hyndman <Rob.Hyndman@buseco.monash.edu.au>
 License: GPL (>= 2)
-URL: http://www.robjhyndman.com/software/mcomp/
-Packaged: 2009-10-19 02:18:12 UTC; hyndman
+URL: http://robjhyndman.com/software/mcomp/
+Packaged: 2011-02-22 23:24:25 UTC; hyndman
 Repository: CRAN
-Date/Publication: 2009-10-19 06:48:08
+Date/Publication: 2011-02-23 10:08:27
