--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,15 +3,15 @@ Title: Data from the M-competitions
 Description: The 1001 time series from the M-competition (Makridakis et
         al. 1982) and the 3003 time series from the IJF-M3 competition
         (Makridakis and Hibon, 2000).
-Version: 2.03
-Date: 2011-08-11
-Depends: R (>= 2.0.0), graphics, stats, tseries, forecast
+Version: 2.04
+Date: 2012-03-19
+Depends: R (>= 2.10), graphics, stats, tseries, forecast
 LazyData: yes
 LazyLoad: yes
 Author: Rob J Hyndman <Rob.Hyndman@monash.edu>
 Maintainer: Rob J Hyndman <Rob.Hyndman@monash.edu>
 License: GPL (>= 2)
 URL: http://robjhyndman.com/software/mcomp/
-Packaged: 2011-08-11 05:57:53 UTC; Rob
+Packaged: 2012-03-18 22:16:00 UTC; hyndman
 Repository: CRAN
-Date/Publication: 2011-08-11 07:10:10
+Date/Publication: 2012-03-19 06:52:30
